# landing-system

./: .gitignore  LICENSE  README.md  __main__.py  color_tracker.py  graph_telemetry.py  launch_gazebo.sh  opencv-test.py  picamera-test.py  picamera-thread-test.py  range-detector.py  track.py  tracker.cfg  traffic_circuit.plan
gazebo/plugins/: CMakeLists.txt  wind_animation.cc
old/: accurate_landing.py  lcd.py  oled.py  pcam-threading.py  pcam-video.py  video-test.py
recordings/: 2021-04-13_03:24:56.avi  2021-04-13_03:25:43.avi  2021-05-04_16:51:47.avi  2021-05-04_17:17:56.avi  2021-05-04_17:18:24.avi  2021-05-04_17:50:31.avi  2021-05-04_17:52:08.avi  2021-05-04_17:52:59.avi  2021-05-16_20:50:09.avi
telemetry/: 2021-03-31_01:59:32.csv  2021-04-05_00:49:48_keep.csv  2021-04-05_02:32:50_keep.csv  2021-04-05_03:44:24_keep.csv  2021-04-13_03:24:56.csv  2021-04-13_03:25:43.csv  2021-04-15_00:09:34_wind.csv  2021-04-15_00:12:29_no_wind.csv  2021-04-15_02:59:09_no_pid.csv  2021-05-04_15:22:54.csv  2021-05-04_15:29:58.csv  2021-05-04_15:31:25.csv  2021-05-04_16:54:20.csv  2021-05-04_16:57:29.csv  2021-05-04_16:59:58.csv  2021-05-04_17:00:18.csv  2021-05-04_17:00:41.csv  2021-05-04_17:00:58.csv  2021-05-04_17:01:15.csv  2021-05-04_17:07:47.csv  2021-05-04_17:08:30.csv  2021-05-04_17:17:56.csv  2021-05-04_17:18:24.csv  2021-05-04_17:26:38.csv  2021-05-04_17:50:31.csv  2021-05-04_17:52:08.csv  2021-05-04_17:52:59.csv  2021-05-16_20:40:31.csv  2021-05-16_20:40:56.csv  2021-05-16_20:42:11.csv  2021-05-16_20:42:18.csv  2021-05-16_20:43:30.csv  2021-05-16_20:47:04.csv  (+2 more)
(+6 files in other folders)
